Test improvments and general cleanup following review round